--- a/tests/stress_tests/CMakeLists.txt
+++ b/tests/stress_tests/CMakeLists.txt
@@ -11,9 +11,9 @@ endif()
 
 find_package(InferenceEngineDeveloperPackage REQUIRED)
 
-set(OpenVINO_MAIN_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../")
+set(OpenVINO_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../")
 
-if(EXISTS "${OpenVINO_MAIN_SOURCE_DIR}/thirdparty/gflags")
+if(EXISTS "${OpenVINO_SOURCE_DIR}/thirdparty/gflags")
     function(add_gflags)
         set(GFLAGS_IS_SUBPROJECT TRUE)
         set(HAVE_SYS_STAT_H 1)
@@ -21,7 +21,7 @@ if(EXISTS "${OpenVINO_MAIN_SOURCE_DIR}/thirdparty/gflags")
         set(INTTYPES_FORMAT C99)
         set(BUILD_TESTING OFF)
         set(BUILD_SHARED_LIBS OFF)
-        add_subdirectory(${OpenVINO_MAIN_SOURCE_DIR}/thirdparty/gflags
+        add_subdirectory(${OpenVINO_SOURCE_DIR}/thirdparty/gflags
                          ${CMAKE_CURRENT_BINARY_DIR}/gflags_build
                          EXCLUDE_FROM_ALL)
         set_target_properties(gflags_nothreads_static PROPERTIES FOLDER thirdparty)
