--- a/ngraph/test/util/CMakeLists.txt
+++ b/ngraph/test/util/CMakeLists.txt
@@ -26,7 +26,8 @@ if(COMMAND ie_faster_build)
     )
 endif()
 
-target_include_directories(ngraph_test_util PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/.. ${IE_MAIN_SOURCE_DIR}/include)
+target_include_directories(ngraph_test_util PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..
+    $<TARGET_PROPERTY:inference_engine,INTERFACE_INCLUDE_DIRECTORIES>)
 target_link_libraries(ngraph_test_util PUBLIC ngraph ngraph_backend gtest gmock)
 if (NGRAPH_ONNX_IMPORT_ENABLE)
     target_link_libraries(ngraph_test_util PRIVATE onnx_common)
