Use ngraph target directly

--- a/inference-engine/src/cldnn_engine/CMakeLists.txt
+++ b/inference-engine/src/cldnn_engine/CMakeLists.txt
@@ -30,7 +30,7 @@ target_link_libraries(${TARGET_NAME} PRIVATE clDNN_lib pugixml::static
                                              inference_engine
                                              inference_engine_transformations
                                              inference_engine_lp_transformations
-                                             ${NGRAPH_LIBRARIES})
+                                             ngraph)
 
 target_include_directories(${TARGET_NAME} PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}
