--- a/inference-engine/tests/ngraph_helpers/ngraph_functions/CMakeLists.txt
+++ b/inference-engine/tests/ngraph_helpers/ngraph_functions/CMakeLists.txt
@@ -5,7 +5,6 @@
 set(TARGET_NAME ngraphFunctions)
 
 list(APPEND EXPORT_DEPENDENCIES
-        ${NGRAPH_LIBRARIES}
         ngraph_backend
         interpreter_backend
         )
@@ -22,9 +21,9 @@ addIeTarget(
         ADDITIONAL_SOURCE_DIRS
             ${CMAKE_CURRENT_SOURCE_DIR}/src
         LINK_LIBRARIES
-            PUBLIC        
-                ${NGRAPH_LIBRARIES}
-                ngraph_backend
+            PUBLIC
+                ngraph
+                # ngraph_backend
                 interpreter_backend
         ADD_CPPLINT
         DEVELOPER_PACKAGE
