--- a/inference-engine/src/readers/ir_reader/CMakeLists.txt
+++ b/inference-engine/src/readers/ir_reader/CMakeLists.txt
@@ -28,7 +28,7 @@ target_compile_definitions(${TARGET_NAME} PRIVATE IMPLEMENT_INFERENCE_ENGINE_PLU
 
 target_include_directories(${TARGET_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
 
-target_link_libraries(${TARGET_NAME} PRIVATE ${NGRAPH_LIBRARIES}
+target_link_libraries(${TARGET_NAME} PRIVATE ngraph
                                              inference_engine_reader_api
                                              inference_engine_plugin_api
                                              inference_engine
