Fixed ngraph unit tests in Debug (#6470)
* Added compile_tool to PATH

* Installed benchmark_app

* Fixed ngraph unit tests in Debug

* Install of VPU_FIRMWARE to <root>/tests folder

* Conditional installation of benchmark_app

--- a/inference-engine/CMakeLists.txt
+++ b/inference-engine/CMakeLists.txt
@@ -52,6 +52,11 @@ install(TARGETS format_reader
         RUNTIME DESTINATION ${IE_CPACK_RUNTIME_PATH} COMPONENT tests EXCLUDE_FROM_ALL
         LIBRARY DESTINATION ${IE_CPACK_LIBRARY_PATH} COMPONENT tests EXCLUDE_FROM_ALL)
 
+if(TARGET benchmark_app)
+    install(TARGETS benchmark_app
+            RUNTIME DESTINATION tests COMPONENT tests EXCLUDE_FROM_ALL)
+endif()
+
 # install C samples
 
 ie_cpack_add_component(c_samples DEPENDS core_c)
