--- a/inference-engine/tests/functional/plugin/conformance/subgraphs_dumper/CMakeLists.txt
+++ b/inference-engine/tests/functional/plugin/conformance/subgraphs_dumper/CMakeLists.txt
@@ -19,6 +19,7 @@ addIeTargetTest(
         DEPENDENCIES
             ${DEPENDENCIES}
             inference_engine_ir_reader
+            frontend_manager
         LINK_LIBRARIES
             PRIVATE
                 ${DEPENDENCIES}
