Fix FE dependency

--- a/inference-engine/tests/functional/plugin/conformance/subgraphs_dumper/tests/CMakeLists.txt
+++ b/inference-engine/tests/functional/plugin/conformance/subgraphs_dumper/tests/CMakeLists.txt
@@ -7,7 +7,7 @@ set(TARGET_NAME subgraphsDumperTests)
 list(APPEND DEPENDENCIES
         unitTestUtils
         ngraph
-        frontend_manager
+        ngraph::frontend_manager
         )
 
 addIeTargetTest(
