--- a/inference-engine/tests/unit/cpu/CMakeLists.txt
+++ b/inference-engine/tests/unit/cpu/CMakeLists.txt
@@ -17,7 +17,7 @@ addIeTargetTest(
             mkldnn
             inference_engine_transformations
             inference_engine_lp_transformations
-            frontend_manager
+            ngraph::frontend_manager
         ADD_CPPLINT
         LABELS
             CPU
