--- a/inference-engine/tests/unit/vpu/CMakeLists.txt
+++ b/inference-engine/tests/unit/vpu/CMakeLists.txt
@@ -28,7 +28,7 @@ addIeTargetTest(
             ngraph_backend
             interpreter_backend
             inference_engine_lp_transformations # for ngraphFunctions
-            frontend_manager
+            ngraph::frontend_manager
         ADD_CPPLINT
         LABELS
             VPU
