--- a/inference-engine/tests/unit/inference_engine/CMakeLists.txt
+++ b/inference-engine/tests/unit/inference_engine/CMakeLists.txt
@@ -18,7 +18,7 @@ addIeTargetTest(
         LINK_LIBRARIES
             unitTestUtils
             inference_engine_lp_transformations
-            frontend_manager
+            ngraph::frontend_manager
             ${OpenCV_LIBRARIES}
         ADD_CPPLINT
         DEPENDENCIES
