--- a/inference-engine/tests/ie_test_utils/unit_test_utils/CMakeLists.txt
+++ b/inference-engine/tests/ie_test_utils/unit_test_utils/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(mocks/mock_engine)
 list(APPEND EXPORT_DEPENDENCIES
         commonTestUtils_s
         inference_engine_s
+        ngraph::frontend_manager
         gmock)
 
 addIeTarget(
