--- a/inference-engine/tests_deprecated/functional/vpu/CMakeLists.txt
+++ b/inference-engine/tests_deprecated/functional/vpu/CMakeLists.txt
@@ -64,6 +64,7 @@ addIeTargetTest(
         ${CMAKE_CURRENT_BINARY_DIR}
     LINK_LIBRARIES
         IESharedTests
+        ngraph::frontend_manager
         vpu_custom_kernels
     LINK_LIBRARIES_WHOLE_ARCHIVE
         myriadTestData
