--- a/cmake/templates/InferenceEngineDeveloperPackageConfig.cmake.in
+++ b/cmake/templates/InferenceEngineDeveloperPackageConfig.cmake.in
@@ -7,7 +7,8 @@
 include(CMakeFindDependencyMacro)
 
 # TODO: remove after changing [private plugins]
-set_and_check(OpenVINO_MAIN_SOURCE_DIR "@OpenVINO_MAIN_SOURCE_DIR@") # KMB
+set_and_check(OpenVINO_SOURCE_DIR "@OpenVINO_SOURCE_DIR@") # KMB
+set_and_check(OpenVINO_MAIN_SOURCE_DIR "@OpenVINO_SOURCE_DIR@") # KMB
 set_and_check(IE_MAIN_SOURCE_DIR "@IE_MAIN_SOURCE_DIR@") # HDDL
 
 # Variables to export in plugin's projects
@@ -33,7 +34,7 @@ set_and_check(gflags_DIR "@gflags_BINARY_DIR@")
 #
 
 find_dependency(IEDevScripts
-                PATHS "${OpenVINO_MAIN_SOURCE_DIR}/cmake/developer_package"
+                PATHS "${OpenVINO_SOURCE_DIR}/cmake/developer_package"
                 NO_CMAKE_FIND_ROOT_PATH
                 NO_DEFAULT_PATH)
 
@@ -51,9 +52,10 @@ foreach(component @openvino_export_components@)
     include("${CMAKE_CURRENT_LIST_DIR}/${component}_dev_targets.cmake")
 endforeach()
 
-if(USE_SYSTEM_PUGIXML)
+if(ENABLE_SYSTEM_PUGIXML)
     find_dependency(PugiXML)
     set_property(TARGET pugixml PROPERTY IMPORTED_GLOBAL TRUE)
+    add_library(IE::pugixml ALIAS pugixml)
 endif()
 
 # inherit OpenCV from main IE project if enabled
