--- a/inference-engine/src/offline_transformations/CMakeLists.txt
+++ b/inference-engine/src/offline_transformations/CMakeLists.txt
@@ -19,8 +19,8 @@ source_group("include" FILES ${PUBLIC_HEADERS})
 
 add_library(${TARGET_NAME} STATIC ${LIBRARY_SRC} ${PUBLIC_HEADERS})
 
-target_link_libraries(${TARGET_NAME} PUBLIC ${NGRAPH_LIBRARIES} inference_engine_transformations ngraph::reference
-                                     PRIVATE openvino::itt pugixml)
+target_link_libraries(${TARGET_NAME} PUBLIC ngraph inference_engine_transformations ngraph::reference
+                                     PRIVATE openvino::itt pugixml::static)
 
 target_include_directories(${TARGET_NAME} PUBLIC ${PUBLIC_HEADERS_DIR}
                                           PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")
