--- a/inference-engine/src/vpu/graph_transformer/CMakeLists.txt
+++ b/inference-engine/src/vpu/graph_transformer/CMakeLists.txt
@@ -37,19 +37,19 @@ function(add_graph_transformer_target TARGET_NAME STATIC_IE)
             "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
     target_include_directories(${TARGET_NAME}
-        SYSTEM PUBLIC
-            $<TARGET_PROPERTY:pugixml,INTERFACE_INCLUDE_DIRECTORIES>
+        PUBLIC
+            $<TARGET_PROPERTY:pugixml::static,INTERFACE_INCLUDE_DIRECTORIES>
             $<TARGET_PROPERTY:mvnc,INTERFACE_INCLUDE_DIRECTORIES>)
 
     if(STATIC_IE)
         target_link_libraries(${TARGET_NAME} PUBLIC vpu_common_lib_test_static)
     else()
-        target_link_libraries(${TARGET_NAME} PUBLIC pugixml vpu_common_lib)
+        target_link_libraries(${TARGET_NAME} PUBLIC pugixml::static vpu_common_lib)
     endif()
 
     target_link_libraries(${TARGET_NAME}
         PUBLIC
-            ${NGRAPH_LIBRARIES}
+            ngraph
             inference_engine_plugin_api
         PRIVATE
             openvino::itt
