--- a/.gitmodules
+++ b/.gitmodules
@@ -32,10 +32,10 @@
 	path = thirdparty/ocl/clhpp_headers
 	url = https://github.com/KhronosGroup/OpenCL-CLHPP.git
 [submodule "thirdparty/onnx"]
-	path = thirdparty/onnx
+	path = thirdparty/onnx/onnx
 	url = https://github.com/openvinotoolkit/onnx.git
 [submodule "thirdparty/protobuf"]
-	path = thirdparty/protobuf
+	path = thirdparty/protobuf/protobuf
 	url = https://github.com/protocolbuffers/protobuf.git
 [submodule "ngraph/python/pybind11"]
 	path = ngraph/python/pybind11
