--- a/.ci/azure/linux_ngraph_onnx.yml
+++ b/.ci/azure/linux_ngraph_onnx.yml
@@ -4,9 +4,14 @@ jobs:
     matrix:
       Release:
         BUILD_TYPE: 'Release'
+        PROTOBUF_LITE: 'OFF'
       Debug:
         BUILD_TYPE: 'Debug'
-    maxParallel: 2
+        PROTOBUF_LITE: 'OFF'
+      Protobuf_lite:
+        BUILD_TYPE: 'Release'
+        PROTOBUF_LITE: 'ON'
+    maxParallel: 3
 
   # About 300% of total time
   timeoutInMinutes: 90
@@ -60,7 +65,7 @@ jobs:
     submodules: recursive
     path: openvino
 
-  - script: docker build --tag=openvino-onnx-ci-image --file=.ci/openvino-onnx/Dockerfile --build-arg BUILD_TYPE=$(BUILD_TYPE) .
+  - script: docker build --tag=openvino-onnx-ci-image --file=.ci/openvino-onnx/Dockerfile --build-arg BUILD_TYPE=$(BUILD_TYPE) --build-arg PROTOBUF_LITE=$(PROTOBUF_LITE) .
     displayName: 'Docker build'
 
   - script: ngraph/python/tests/test_onnx/model_zoo_preprocess.sh -d $(TMP_DIR) -o -s "$(ONNX_MODEL_ZOO_SHA)"
