Update names and remove Debug tests

--- a/.ci/azure/linux_ngraph_onnx.yml
+++ b/.ci/azure/linux_ngraph_onnx.yml
@@ -1,16 +1,19 @@
 jobs:
-- job: nGraph_ONNX_Lin
+- job: OpenVINO ONNX CI
   strategy:
     matrix:
       Release:
         BUILD_TYPE: 'Release'
         PROTOBUF_LITE: 'OFF'
+        TOX_COMMAND: 'tox && tox -e zoo_models'
       Debug:
         BUILD_TYPE: 'Debug'
         PROTOBUF_LITE: 'OFF'
+        TOX_COMMAND: 'tox'
       Protobuf_lite:
         BUILD_TYPE: 'Release'
         PROTOBUF_LITE: 'ON'
+        TOX_COMMAND: 'tox && tox -e zoo_models'
     maxParallel: 3
 
   # About 300% of total time
@@ -90,5 +93,5 @@ jobs:
     displayName: 'Create swap'
 
   - script: |
-      docker run --name openvino-onnx-ci-container --volume $(TMP_DIR)/model_zoo/onnx_model_zoo_$(ONNX_MODEL_ZOO_SHA):/root/.onnx/model_zoo/onnx_model_zoo --volume $(MODELS_DIR)/msft:/root/.onnx/model_zoo/MSFT openvino-onnx-ci-image /bin/bash -c "tox && tox -e zoo_models"
+      docker run --name openvino-onnx-ci-container --volume $(TMP_DIR)/model_zoo/onnx_model_zoo_$(ONNX_MODEL_ZOO_SHA):/root/.onnx/model_zoo/onnx_model_zoo --volume $(MODELS_DIR)/msft:/root/.onnx/model_zoo/MSFT openvino-onnx-ci-image /bin/bash -c $(TOX_COMMAND)
     displayName: 'Docker run'
