--- a/.ci/azure/linux_ngraph_onnx.yml
+++ b/.ci/azure/linux_ngraph_onnx.yml
@@ -73,9 +73,7 @@ jobs:
 
   - script: ngraph/python/tests/test_onnx/model_zoo_preprocess.sh -d $(TMP_DIR) -o -s "$(ONNX_MODEL_ZOO_SHA)"
     displayName: 'Get models'
-    ${{ if eq(variables['BUILD_TYPE'], 'Debug')}}:
-      enabled: false
-
+    condition: ne(variables['BUILD_TYPE'], 'Debug'
 
   - script: sudo fallocate -l 48G /swapfile ; sudo mkswap /swapfile ; sudo swapon /swapfile ; df ; free -h
     displayName: 'Create swap'
