Removed EXPORT_DEPENDENCIES from addIeTarget (#6502)
* Added pugixml as submodule

* CVS-34900: updated pugixml to v1.11.4

* Fixed link with pugixml

* USe pugixml::static

* Try to fix bug

* Removed GITHUB_PULL_REQUEST

* Replaced  OpenVINO_MAIN_SOURCE_DIR -> OpenVINO_SOURCE_DIR

* Removed some usages of IE_MAIN_SOURCE_DIR

* Use ngraph target directly

* Removed EXPORT_DEPENDENCIES

--- a/inference-engine/src/inference_engine/CMakeLists.txt
+++ b/inference-engine/src/inference_engine/CMakeLists.txt
@@ -181,7 +181,7 @@ ie_add_api_validator_post_build_step(TARGET ${TARGET_NAME})
 
 # Static library used for unit tests which are always built
 
-add_library(${TARGET_NAME}_s STATIC
+add_library(${TARGET_NAME}_s STATIC EXCLUDE_FROM_ALL
             $<TARGET_OBJECTS:${TARGET_NAME}_legacy_obj>
             $<TARGET_OBJECTS:${TARGET_NAME}_obj>
             ${IE_STATIC_DEPENDENT_FILES})
