Add adaptive pool reference implementation (#6317)
* Add adaptive pool reference implementation

* Add forgotten files

* Fix codestyle

* Disable tests

* Add more tests

* Fix build

* Fix comments

* Remove CoordinateTransform usage from AdaptiveAvgPool

* Fix build

* Refactor AdaptiveMaxPool

* Fix codestyle

* Apply review feedback

* Simplify if statement

--- a/ngraph/test/CMakeLists.txt
+++ b/ngraph/test/CMakeLists.txt
@@ -355,6 +355,8 @@ set(MULTI_TEST_SRC
     backend/abs.in.cpp
     backend/acos.in.cpp
     backend/acosh.in.cpp
+    backend/adaptive_avg_pool.in.cpp
+    backend/adaptive_max_pool.in.cpp
     backend/add.in.cpp
     backend/aliased_output.in.cpp
     backend/api.in.cpp
