--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -29,11 +29,11 @@ ie_cpack_add_component(setupvars REQUIRED)
 
 if(UNIX)
     install(PROGRAMS setupvars/setupvars.sh
-            DESTINATION bin
+            DESTINATION .
             COMPONENT setupvars)
 elseif(WIN32)
     install(PROGRAMS setupvars/setupvars.bat
-            DESTINATION bin
+            DESTINATION .
             COMPONENT setupvars)
 endif()
 
@@ -52,13 +52,13 @@ ie_cpack_add_component(demo_scripts DEPENDS core)
 
 if(UNIX)
     install(DIRECTORY demo/
-            DESTINATION deployment_tools/demo
+            DESTINATION extras/open_model_zoo/demo
             COMPONENT demo_scripts
             USE_SOURCE_PERMISSIONS
             PATTERN *.bat EXCLUDE)
 elseif(WIN32)
     install(DIRECTORY demo/
-            DESTINATION deployment_tools/demo
+            DESTINATION extras/open_model_zoo/demo
             COMPONENT demo_scripts
             USE_SOURCE_PERMISSIONS
             PATTERN *.sh EXCLUDE)
