[nGraph] 🦒 Move ngraph dependencies to submodules (#6304)
* [nGraph] 🦒 Move onnx library to submodule

* [nGraph] 🦒 Move protobuf library to submodule

* [nGraph] 🦒 Move pybind11 library to submodule

* [nGraph] 🦒 Move ittapi library to submodule

* 🛠️ fix extraction of protobuf_VERSION

* Skip shellcheck for pybind11

* WIP I

* Fix condition in protobuf version comparison

* downgrade protobuf to 3.7.1

* Change location of submodules with configs

* Fix

* Update protobuf to v3.9.2

* FIX II

* Style

* FIX III

* switch to tar.gz

--- a/.gitmodules
+++ b/.gitmodules
@@ -38,3 +38,15 @@
 	path = thirdparty/ocl/clhpp_headers
 	url = https://github.com/KhronosGroup/OpenCL-CLHPP.git
 	ignore = dirty
+[submodule "thirdparty/onnx"]
+	path = thirdparty/onnx/onnx
+	url = https://github.com/openvinotoolkit/onnx.git
+[submodule "thirdparty/protobuf"]
+	path = thirdparty/protobuf/protobuf
+	url = https://github.com/protocolbuffers/protobuf.git
+[submodule "ngraph/python/pybind11"]
+	path = ngraph/python/pybind11
+	url = https://github.com/pybind/pybind11.git
+[submodule "thirdparty/ittapi/ittapi"]
+	path = thirdparty/ittapi/ittapi
+	url = https://github.com/intel/ittapi.git
