revise atan op (#6288)
* revise atan op

* use parametrized vistor API

* use new gtest macros

* Update docs/ops/arithmetic/Atan_1.md

Co-authored-by: Gabriele Galiero Casay <gabriele.galiero.casay@intel.com>

* Update docs/ops/arithmetic/Atan_1.md

Co-authored-by: Gabriele Galiero Casay <gabriele.galiero.casay@intel.com>

* Update ngraph/core/src/op/atan.cpp

Co-authored-by: Gabriele Galiero Casay <gabriele.galiero.casay@intel.com>

* update doc to follow the rules

* create type_prop for atan

* drop op_eval to be covered in backend

* add the missing type prop case

* add integer type ref impl

* fix clang issue

Co-authored-by: Gabriele Galiero Casay <gabriele.galiero.casay@intel.com>

--- a/ngraph/test/CMakeLists.txt
+++ b/ngraph/test/CMakeLists.txt
@@ -96,6 +96,7 @@ set(SRC
     type_prop/adaptive_max_pool.cpp
     type_prop/asin.cpp
     type_prop/assign.cpp
+    type_prop/atan.cpp
     type_prop/avg_pool.cpp
     type_prop/batch_norm.cpp
     type_prop/batch_to_space.cpp
@@ -228,6 +229,7 @@ set(SRC
     visitors/value_map.cpp
     visitors/op/adaptive_avg_pool.cpp
     visitors/op/adaptive_max_pool.cpp
+    visitors/op/atan.cpp
     visitors/op/batch_norm.cpp
     visitors/op/broadcast.cpp
     visitors/op/bucketize.cpp
