--- a/ngraph/test/CMakeLists.txt
+++ b/ngraph/test/CMakeLists.txt
@@ -398,6 +398,7 @@ set(MULTI_TEST_SRC
     backend/deformable_convolution.in.cpp
     backend/depth_to_space.in.cpp
     backend/dyn_reshape.in.cpp
+    backend/equal.in.cpp
     backend/experimental_detectron_generate_proposals.in.cpp
     backend/experimental_detectron_topk_rois.in.cpp
     backend/strided_slice.in.cpp
