--- a/.ci/azure/linux.yml
+++ b/.ci/azure/linux.yml
@@ -33,6 +33,7 @@ jobs:
     BIN_DIR: $(REPO_DIR)/bin/intel64/$(BUILD_TYPE)
     INSTALL_DIR: $(WORK_DIR)/install_pkg
     SETUPVARS: $(INSTALL_DIR)/bin/setupvars.sh
+    PYTHONPATH: $(BIN_DIR)/lib/python_api/python3.6
 
   steps:
   - script: |
@@ -191,7 +192,7 @@ jobs:
       export DATA_PATH=$(MODELS_PATH)
       export MODELS_PATH=$(MODELS_PATH)
       export LD_LIBRARY_PATH=$(BIN_DIR)/lib
-      export PYTHONPATH=$(BIN_DIR)/lib/python_api/python3.6
+      export PYTHONPATH=$(PYTHONPATH)
       env
       cd $(REPO_DIR)/inference-engine/ie_bridges/python/tests
       pytest pytest --junitxml=TEST-PythonAPI.xml
@@ -202,12 +203,12 @@ jobs:
   - script: |
       export MO_ROOT=$(REPO_DIR)/model-optimizer/
       export IE_APP_PATH=$(REPO_DIR)/inference-engine/
-      export PYTHONPATH=$(REPO_DIR)/tests/layer_tests/:$(PYTHONPATH)
+      export PYTHONPATH=$(PYTHONPATH):$(REPO_DIR)/tests/layer_tests/
       sudo apt-get install python3-setuptools
       python3 -m pip install --upgrade pip
       python3 -m pip install -r $(REPO_DIR)/tests/layer_tests/requirements.txt
       env
-      pytest .tests/layer_tests/tensorflow_tests/test_tf_Add.py --junitxml=TEST-tf_Add.xml
+      python3 -m pytest $(REPO_DIR)/tests/layer_tests/tensorflow_tests/test_tf_Add.py --junitxml=TEST-tf_Add.xml
     displayName: 'Add Layer Tests'
     continueOnError: false
 
